--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       </div>
       <div class="navigaton-desk">
           <div>
-            <input type="checkbox" id='toggle-inner-list-product' name='expand'/>
-            <label for='toggle-inner-list-product'>Product</label>
+            <input type="checkbox" id='toggle-inner-list-product-desk' name='expand'/>
+            <label for='toggle-inner-list-product-desk'>Product</label>
             <ul class="inner-list">
                 <li><a href='#' >Overview</a></li>
                 <li><a href='#' >Pricing</a></li>
@@ -75,8 +75,8 @@
               </ul>
           </div>
           <div>
-            <input type="checkbox" id='toggle-inner-list-comp' name='expand'/>
-            <label for='toggle-inner-list-comp'>Company</label>
+            <input type="checkbox" id='toggle-inner-list-comp-desk' name='expand'/>
+            <label for='toggle-inner-list-comp-desk'>Company</label>
             <ul class="inner-list">
                 <li>About</li>
                 <li>Team</li>
@@ -85,8 +85,8 @@
             </ul>
           </div>
           <div>
-            <input type="checkbox" id='toggle-inner-list-connect' name='expand'/>
-            <label for='toggle-inner-list-connect'>Connect</label>
+            <input type="checkbox" id='toggle-inner-list-connect-desk' name='expand'/>
+            <label for='toggle-inner-list-connect-desk'>Connect</label>
             <ul class="inner-list">
                 <li>Contact</li>
                 <li>Newsletter</li>
