--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <div>
             <input type="checkbox" id='toggle-inner-list-product-desk' name='expand'/>
             <label for='toggle-inner-list-product-desk'>Product</label>
+            <img  class='arrow-down' src="./images/icon-arrow-light.svg" alt='' />
             <ul class="inner-list">
                 <li><a href='#' >Overview</a></li>
                 <li><a href='#' >Pricing</a></li>
@@ -77,6 +78,7 @@
           <div>
             <input type="checkbox" id='toggle-inner-list-comp-desk' name='expand'/>
             <label for='toggle-inner-list-comp-desk'>Company</label>
+            <img  class='arrow-down' src="./images/icon-arrow-light.svg" alt='' />
             <ul class="inner-list">
                 <li>About</li>
                 <li>Team</li>
@@ -87,6 +89,7 @@
           <div>
             <input type="checkbox" id='toggle-inner-list-connect-desk' name='expand'/>
             <label for='toggle-inner-list-connect-desk'>Connect</label>
+            <img  class='arrow-down' src="./images/icon-arrow-light.svg" alt='' />
             <ul class="inner-list">
                 <li>Contact</li>
                 <li>Newsletter</li>
